welcome.lessons.welcome.array.array667.Array667.scala.error
array667:8: error: value or is not a member of Boolean
      if (nums(i)==6 or nums(i)==7)
                     ^